fix(ci): address review of the CI hardening batch
- Changelog guard skips lines inside fenced code blocks, as the collator
  does, so a quoted "## Example (date)" or a YAML "---" in an example no
  longer fails it; new ChangelogDisciplineJobTest cases for both.
- AGENTS.md §2 rule 8 describes the new guard and the --check step.
- Node-pin test requires a workflow using env.NODE_VERSION to declare it
  at the pom's value, so the assertion cannot steer a workflow to an
  undefined variable.
- The Jlama dev flag is in AGENTS.md, CONTRIBUTING.md,
  docs/getting-started.md and docs/developer-quickstart.md too;
  JlamaRuntimeFlagsTest grades them (CONTRIBUTING.md excepted: no backend
  filter covers it).
- ui/manager/.claude/ is re-excluded apart from skills/ and launch.json.
- pom.xml and the changelog name Dockerfile.demo as outside the Node
  checksum; the fragment no longer carries a literal zero-width space.